Utiliza enviroments en el workflow 2

--- a/.github/workflows/my-env-vars-workflow.yml
+++ b/.github/workflows/my-env-vars-workflow.yml
@@ -7,7 +7,7 @@ env:
   DB_NAME: db-name
 jobs:
   model-ci:
-    enviromant: exploracion
+    enviroment: exploracion
     env:
       DB_ADDRESS: my.database.address
       DB_USERNAME: ${{secrets.DB_USERNAME}}
