--- a/.github/workflows/my-env-vars-workflow.yml
+++ b/.github/workflows/my-env-vars-workflow.yml
@@ -1,8 +1,8 @@
 name: My Env Vars Workflow
-on:
-  push:
-    branches:
-      - 'master'
+on: workflow-dispatch
+  #push:
+  #  branches:
+  #    - 'master'
 env:
   DB_NAME: db-name
 jobs:
